Java 17 code smells